Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetNumObj.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
