Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextRetbooleanFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
